--- a/room/templates/room/room.html
+++ b/room/templates/room/room.html
@@ -101,6 +101,7 @@
   let confirmCallback = null;
 
   function setupWebSocket() {
+      const wsScheme = window.location.protocol === "https:" ? "wss://" : "ws://";
       chatSocket = new WebSocket(
           'ws://' + window.location.host + '/ws/' + roomName + '/'
       );
